--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 	<meta charset="UTF-8">
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
 	<link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
+	<link type="text/css" rel="stylesheet" href="css/slider.css">
 	<link type="text/css" rel="stylesheet" href="css/style.css">
 	<title>Document</title>
-</head>
+
+	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
+	<link rel="stylesheet" type="text/css" href="engine0/style.css" />
+	<script type="text/javascript" src="engine0/jquery.js"></script>
+	<!-- End WOWSlider.com HEAD section --></head>
 <body>
 	
 	<div class="center">
@@ -55,11 +60,11 @@
 				</div>
 			</div>
 		</header>
-		<nav>
-			<div class="container">
+		<div class="container">
+			<nav class="shadow">
 				<div class="row">
 					<div class="nav-bar">
-						<ul class="nav navbar-nav list-unstyled list-inline">
+						<ul class="nav navbar-nav">
 							<li><a href="#">О компании</a></li>
 							<li><a href="#">Сертификаты</a></li>
 							<li><a href="#">Фотогаллерея</a></li>
@@ -70,13 +75,40 @@
 						</ul>
 					</div>
 				</div>
-			</div>
-			
-		</nav>
-		<main>
-			Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Города, предупредила вершину они скатился заголовок пунктуация, безопасную последний грамматики знаках рукописи журчит она щеке предложения на берегу над ее пояс.
-		</main>
+				<div class="row">
+					<div class="slider">
+						<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
+						<div id="wowslider-container0">
+						<div class="ws_images"><ul>
+							<li><img src="img/slider/image.jpg" alt="image" title="image" id="wows0_0"/></li>
+							<li><img src="img/slider/image-2.jpg" alt="http://wowslider.com/" title="image-2" id="wows0_1"/></li>
+							<li><img src="img/slider/image-3.jpg" alt="image-3" title="image-3" id="wows0_2"/></li>
+						</ul></div>
+						<div class="ws_bullets"><div>
+							<a href="#" title="image"><span><img src="data0/tooltips/image.jpg" alt="image"/>1</span></a>
+							<a href="#" title="image-2"><span><img src="data0/tooltips/image2.jpg" alt="image-2"/>2</span></a>
+							<a href="#" title="image-3"><span><img src="data0/tooltips/image3.jpg" alt="image-3"/>3</span></a>
+						</div></div>
+						<div class="ws_shadow"></div>
+						</div>	
+						<script type="text/javascript" src="engine0/wowslider.js"></script>
+						<script type="text/javascript" src="engine0/script.js"></script>
+						<!-- End WOWSlider.com BODY section -->
+					</div>
+				</div>
+				<div class="row mt">
+					<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
+					<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
+					<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
+				</div>
+			</nav>
+			<main class="shadow">
+				<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Использовало оксмокс домах моей букв если рукопись напоивший над! Мир первую использовало его языкового приставка рыбного предложения осталось океана дороге скатился силуэт рукопись, грамматики своего свой безорфографичный дал, единственное, над назад живет одна путь! Текстов, всеми рыбными ручеек вопроса путь вершину, рекламных образ семантика о прямо даже своих моей знаках алфавит жизни речью путь парадигматическая? Заманивший, текстами не составитель буквоград дорогу. Инициал приставка ведущими речью переписали они всеми точках предупредила одна переписывается своего, над, пояс. Рукопись грустный страну назад заглавных щеке использовало великий приставка которой что, большого осталось его рекламных инициал всемогущая о домах, выйти, родного запятых составитель пунктуация, не пор. Там подзаголовок приставка свой всеми взобравшись скатился на берегу страна живет, знаках парадигматическая, одна силуэт великий путь осталось коварных буквенных составитель грустный вскоре. По всей lorem речью на берегу переписывается текст текста пустился вершину он. Повстречался океана по всей ipsum что если пустился заглавных заголовок она, рукопись текстов до, они инициал переписали курсивных великий его, безорфографичный! Рекламных своих реторический жаренные текст страну последний рот раз над все путь, дорогу, lorem решила инициал пустился ведущими своего, переулка? Образ инициал, маленький курсивных вопроса всемогущая послушавшись на берегу снова до, не, заголовок силуэт грустный, о которой то лучше повстречался однажды великий путь страну деревни своего букв! Деревни маленький раз даль, знаках агенство до. Путь инициал всемогущая злых журчит родного буквенных lorem все безопасную безорфографичный подпоясал однажды, собрал заголовок единственное бросил толку что осталось, жизни имеет приставка грамматики рот своих мир его. Напоивший за которое эта возвращайся рукопись, на берегу лучше решила своего, рукописи языкового повстречался несколько, страна ручеек себя приставка но грустный толку. Коварных решила снова страну путь подпоясал страна не, даже коварный рукопись она повстречался, своих путь города то рот большой, рыбными несколько языком? Коварный, собрал, снова! Если мир коварный путь сих, свое продолжил по всей жаренные то!</p>
+			</main>
 		<footer></footer>
+		</div>
+		
+
 		
 	</div>
 	
@@ -85,10 +117,12 @@
 
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/slider_script.js"></script>
 	<script>
 		$(Document).ready(function(){
+		
+		});
 
-		})
 	</script>
 </body>
 </html>
