--- a/index.html
+++ b/index.html
@@ -61,51 +61,116 @@
 			</div>
 		</header>
 		<div class="container">
-			<nav class="shadow">
-				<div class="row">
-					<div class="nav-bar">
-						<ul class="nav navbar-nav">
-							<li><a href="#">О компании</a></li>
-							<li><a href="#">Сертификаты</a></li>
-							<li><a href="#">Фотогаллерея</a></li>
-							<li><a href="#">Видео</a></li>
-							<li><a href="#">Контакты</a></li>
-							<li><a href="#">Калькулятор</a></li>
-							<li><a href="#">Отзывы</a></li>
-						</ul>
+			<div class="shadow">	
+				<nav>
+					<div class="row">
+						<div class="nav-bar">
+							<ul class="nav navbar-nav">
+								<li><a href="#">О компании</a></li>
+								<li><a href="#">Сертификаты</a></li>
+								<li><a href="#">Фотогаллерея</a></li>
+								<li><a href="#">Видео</a></li>
+								<li><a href="#">Контакты</a></li>
+								<li><a href="#">Калькулятор</a></li>
+								<li><a href="#">Отзывы</a></li>
+							</ul>
+						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="slider">
-						<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
-						<div id="wowslider-container0">
-						<div class="ws_images"><ul>
-							<li><img src="img/slider/image.jpg" alt="image" title="image" id="wows0_0"/></li>
-							<li><img src="img/slider/image-2.jpg" alt="http://wowslider.com/" title="image-2" id="wows0_1"/></li>
-							<li><img src="img/slider/image-3.jpg" alt="image-3" title="image-3" id="wows0_2"/></li>
-						</ul></div>
-						<div class="ws_bullets"><div>
-							<a href="#" title="image"><span><img src="data0/tooltips/image.jpg" alt="image"/>1</span></a>
-							<a href="#" title="image-2"><span><img src="data0/tooltips/image2.jpg" alt="image-2"/>2</span></a>
-							<a href="#" title="image-3"><span><img src="data0/tooltips/image3.jpg" alt="image-3"/>3</span></a>
-						</div></div>
-						<div class="ws_shadow"></div>
-						</div>	
-						<script type="text/javascript" src="engine0/wowslider.js"></script>
-						<script type="text/javascript" src="engine0/script.js"></script>
-						<!-- End WOWSlider.com BODY section -->
+
+					<div class="row">
+						<div class="slider">
+							<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
+							<div id="wowslider-container0">
+							<div class="ws_images"><ul>
+								<li><img src="img/slider/11.jpg" alt="image" title="image" id="wows0_0"/></li>
+								<li><img src="img/slider/20.jpg" alt="http://wowslider.com/" title="image-2" id="wows0_1"/></li>
+								<li><img src="img/slider/58.jpg" alt="image-3" title="image-3" id="wows0_2"/></li>
+							</ul></div>
+							<div class="ws_bullets"><div>
+								<a href="#" title="image"><span><img src="data0/tooltips/image.jpg" alt="image"/>1</span></a>
+								<a href="#" title="image-2"><span><img src="data0/tooltips/image2.jpg" alt="image-2"/>2</span></a>
+								<a href="#" title="image-3"><span><img src="data0/tooltips/image3.jpg" alt="image-3"/>3</span></a>
+							</div></div>
+							<div class="ws_shadow"></div>
+							</div>	
+							<script type="text/javascript" src="engine0/wowslider.js"></script>
+							<script type="text/javascript" src="engine0/script.js"></script>
+							<!-- End WOWSlider.com BODY section -->
+						</div>
 					</div>
-				</div>
-				<div class="row mt">
-					<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
-					<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
-					<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
-				</div>
-			</nav>
-			<main class="shadow">
-				<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Использовало оксмокс домах моей букв если рукопись напоивший над! Мир первую использовало его языкового приставка рыбного предложения осталось океана дороге скатился силуэт рукопись, грамматики своего свой безорфографичный дал, единственное, над назад живет одна путь! Текстов, всеми рыбными ручеек вопроса путь вершину, рекламных образ семантика о прямо даже своих моей знаках алфавит жизни речью путь парадигматическая? Заманивший, текстами не составитель буквоград дорогу. Инициал приставка ведущими речью переписали они всеми точках предупредила одна переписывается своего, над, пояс. Рукопись грустный страну назад заглавных щеке использовало великий приставка которой что, большого осталось его рекламных инициал всемогущая о домах, выйти, родного запятых составитель пунктуация, не пор. Там подзаголовок приставка свой всеми взобравшись скатился на берегу страна живет, знаках парадигматическая, одна силуэт великий путь осталось коварных буквенных составитель грустный вскоре. По всей lorem речью на берегу переписывается текст текста пустился вершину он. Повстречался океана по всей ipsum что если пустился заглавных заголовок она, рукопись текстов до, они инициал переписали курсивных великий его, безорфографичный! Рекламных своих реторический жаренные текст страну последний рот раз над все путь, дорогу, lorem решила инициал пустился ведущими своего, переулка? Образ инициал, маленький курсивных вопроса всемогущая послушавшись на берегу снова до, не, заголовок силуэт грустный, о которой то лучше повстречался однажды великий путь страну деревни своего букв! Деревни маленький раз даль, знаках агенство до. Путь инициал всемогущая злых журчит родного буквенных lorem все безопасную безорфографичный подпоясал однажды, собрал заголовок единственное бросил толку что осталось, жизни имеет приставка грамматики рот своих мир его. Напоивший за которое эта возвращайся рукопись, на берегу лучше решила своего, рукописи языкового повстречался несколько, страна ручеек себя приставка но грустный толку. Коварных решила снова страну путь подпоясал страна не, даже коварный рукопись она повстречался, своих путь города то рот большой, рыбными несколько языком? Коварный, собрал, снова! Если мир коварный путь сих, свое продолжил по всей жаренные то!</p>
-			</main>
-		<footer></footer>
+					<div class="row mt">
+						<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
+						<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
+						<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
+					</div>
+				</nav>
+				<main>
+					<div class="row">
+						<div class="col-xs-12">
+							<h2>Материалы</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident delectus iste veritatis quos consectetur dicta saepe aut sit ipsum fugiat hic natus impedit accusamus, alias omnis distinctio tenetur corporis praesentium aperiam facere quo enim aspernatur. Deserunt eligendi, facilis consequatur eaque commodi repellendus numquam rem unde aspernatur delectus labore, ut, cupiditate at molestiae! Deleniti a necessitatibus deserunt, earum. Repellat necessitatibus assumenda optio ut cumque asperiores nesciunt fugit explicabo pariatur provident dolore similique molestias fuga officia eaque, itaque modi, voluptatem, commodi, exercitationem incidunt veniam laudantium. Inventore minima veniam autem sint laudantium. Modi odit aliquid quam, molestias error officia, cumque enim consequuntur incidunt.</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-12 brends">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+							<img src="img/brends/malpensa_logo.jpg" alt="">
+						</div>
+					</div>
+					<div class="row benefits">
+						<div class="col-xs-3">
+							<img src="img/advantages.png">
+						</div>
+						<div class="col-xs-3">
+							<h2>Приемущества</h2>
+							<ul">
+								<li><span>Lorem ipsum dolor.</span></li>
+								<li><span>Lorem ipsum dolor.</span></li>
+								<li><span>Lorem ipsum dolor.</span></li>
+								<li><span>Lorem ipsum dolor.</span></li>
+								<li><span>Lorem ipsum dolor.</span></li>
+							</ul>
+						</div>
+						<div class="col-xs-6">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quo minima, incidunt iure earum doloremque vel, blanditiis, quod rerum voluptates facere aliquid esse illum corporis reprehenderit voluptatibus repellat. Esse, itaque, animi! Omnis corporis ab dolorum minima, perferendis placeat. Ullam, amet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet qui, blanditiis in adipisci omnis tempore soluta, beatae ipsa porro obcaecati iusto corporis minus impedit ut, laudantium sint consequatur! Alias eveniet id esse voluptatibus recusandae, error eos nostrum incidunt et voluptatum, minima porro itaque deserunt vel nisi inventore sint mollitia, enim!</p>
+						</div>
+					</div>
+					<div class="row mt">
+						<div class="col-xs-12">
+							<h2>Как выбрать</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias eius ex eaque, delectus! Atque amet nulla similique excepturi id optio odit rerum, ipsa placeat tempora fuga veritatis possimus voluptates asperiores exercitationem alias eius assumenda, officia fugit! Quae accusamus, praesentium quaerat minima quo cumque ut perspiciatis repudiandae debitis nostrum ad ipsam expedita ea esse ullam officiis? Quam fuga labore, sapiente unde.</p>
+						</div>
+					</div>
+				</main>
+				<footer>
+					<div class="col-xs-6">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum asperiores ipsam excepturi veritatis recusandae magnam, praesentium hic totam earum, saepe nostrum velit autem aut, quia ad fuga maxime sequi sint?	
+					</div>
+					<div class="col-xs-6">
+						<div class="social-btn">
+								<ul class="list-unstyled list-inline">
+									<li><a href="#">
+										<img src="img/48x48/habrapack-0.2/without-shadow/vk_2.png" alt="vk">
+									</a></li>
+									<li><a href="#">
+										<img src="img/48x48/habrapack-0.2/without-shadow/ok.png" alt="ok">
+									</a></li>
+									<li><a href="#">
+										<img src="img/48x48/habrapack-0.2/without-shadow/instagram.png" alt="instagram">
+									</a></li>
+								</ul>
+							</div>
+					</div>
+				</footer>
+			</div>
+			
 		</div>
 		
 
