--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 						<div class="contacts right">
 							<div class="social-btn">
 								<ul class="list-unstyled list-inline">
-									<li><a href="#">
+									<li><a href="https://vk.com/id190019400" target="_blank">
 										<img src="img/48x48/habrapack-0.2/without-shadow/vk_2.png" alt="vk">
 									</a></li>
-									<li><a href="#">
+									<li><a href="https://ok.ru/profile/561402245853/" target="_blank">
 										<img src="img/48x48/habrapack-0.2/without-shadow/ok.png" alt="ok">
 									</a></li>
 									<li><a href="#">
@@ -99,9 +99,24 @@
 						</div>
 					</div>
 					<div class="row mt">
-						<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
-						<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
-						<div class="col-xs-4 img-menu"><a href="#"><img src="img/slider/image.jpg" alt=""></a></div>
+						<div class="col-xs-4 img-menu">
+							<a href="#">
+								<img src="img/photo-print.png" alt=""></br>
+								<h3>Фото-печать</h3>
+							</a>
+						</div>
+						<div class="col-xs-4 img-menu">
+							<a href="#">
+								<img src="img/photo-gloss.png" alt=""></br>
+								<h3>Глянцевая фактура</h3>
+							</a>
+						</div>
+						<div class="col-xs-4 img-menu">
+							<a href="#">
+								<img src="img/photo-dull.png" alt=""></br>
+								<h3>Матовая фактура</h3>
+							</a>
+						</div>
 					</div>
 				</nav>
 				<main>
@@ -129,7 +144,7 @@
 							<img src="img/advantages.png">
 						</div>
 						<div class="col-xs-3">
-							<h2>Приемущества</h2>
+							<h2>Преимущества</h2>
 							<ul">
 								<li><span>Lorem ipsum dolor.</span></li>
 								<li><span>Lorem ipsum dolor.</span></li>
@@ -156,10 +171,10 @@
 					<div class="col-xs-6">
 						<div class="social-btn">
 								<ul class="list-unstyled list-inline">
-									<li><a href="#">
-										<img src="img/48x48/habrapack-0.2/without-shadow/vk_2.png" alt="vk">
+									<li><a href="https://vk.com/id190019400" target="_blank">
+										<img src="img/48x48/habrapack-0.2/without-shadow/vk_2.png" alt="vk" >
 									</a></li>
-									<li><a href="#">
+									<li><a href="https://ok.ru/profile/561402245853/" target="_blank">
 										<img src="img/48x48/habrapack-0.2/without-shadow/ok.png" alt="ok">
 									</a></li>
 									<li><a href="#">
