--- a/index.html
+++ b/index.html
@@ -166,7 +166,20 @@
 				</main>
 				<footer>
 					<div class="col-xs-6">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum asperiores ipsam excepturi veritatis recusandae magnam, praesentium hic totam earum, saepe nostrum velit autem aut, quia ad fuga maxime sequi sint?	
+						<div class="footer-contacts">
+							<div class="phone">
+								<i class="fa fa-mobile" aria-hidden="true"></i>
+								<span>8-800-800-80-80</span>
+							</div>
+							<div class="phone">
+								<i class="fa fa-mobile" aria-hidden="true"></i>
+								<span>8-800-800-80-80</span>
+							</div>
+							<div class="mail">
+								<i class="fa fa-envelope" aria-hidden="true"></i>
+								<span>mail@mail.ru</span>
+							</div>
+						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="social-btn">
